--- a/src/styles/_slider.scss
+++ b/src/styles/_slider.scss
@@ -35,7 +35,7 @@
 
 .example-enter.example-enter-active {
   opacity: 1;
-  transition: opacity 500ms ease-in;
+  transition: opacity 1000ms ease-in;
 }
 
 .example-leave {
@@ -44,7 +44,8 @@
 
 .example-leave.example-leave-active {
   opacity: 0.01;
-  transition: opacity 300ms ease-in;
+  transition: opacity 1000ms ease-in;
+  border: 1px solid red;
 }
 .example-appear {
   opacity: 0.01;
